# pion-prototypes

./: Cargo.toml  readme.md  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
cek/: Cargo.toml
cek/src/: cek.rs  eval.rs  lib.rs
common/: Cargo.toml
common/src/: env.rs  lib.rs
crates/pion/: Cargo.toml  error.pion
crates/pion-cli/: Cargo.toml
crates/pion-cli/src/: main.rs
crates/pion-cli/tests/: integration.rs
crates/pion-core/: Cargo.toml
crates/pion-core/src/: dump.rs  elab.rs  env.rs  lib.rs  name.rs  pretty.rs  prim.rs  print.rs  semantics.rs  syntax.rs  unelab.rs
crates/pion-core/src/elab/: dependencies.rs  diagnostics.rs  expr.rs  match.rs  pat.rs  tests.rs  unify.rs
crates/pion-core/src/elab/match/: compile.rs  constructors.rs  coverage.rs  decompose.rs  matrix.rs
crates/pion-core/src/syntax/: iterators.rs
crates/pion-diagnostic/: Cargo.toml
crates/pion-diagnostic/src/: lib.rs
crates/pion-elab/: Cargo.toml
crates/pion-elab/src/: command.rs  diagnostics.rs  env.rs  expr.rs  lib.rs  match.rs  pat.rs  stmt.rs  unify.rs
crates/pion-elab/src/match/: compile.rs  constructors.rs  decompose.rs  matrix.rs
crates/pion-hir/: Cargo.toml
crates/pion-hir/src/: lib.rs  lower.rs  syntax.rs  syntax_map.rs
crates/pion-hir/src/lower/: diagnostics.rs
crates/pion-hir/src/syntax/: iterators.rs  walk.rs
crates/pion-language-server/: Cargo.toml
crates/pion-language-server/src/: convert.rs  diagnostics.rs  handlers.rs  lib.rs  server.rs
crates/pion-lexer/: Cargo.toml
crates/pion-lexer/src/: lex.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/pion-lexer/src/token/: reporting.rs  tests.rs
crates/pion-manual-lexer/: Cargo.toml
crates/pion-manual-lexer/src/: lex.rs  lib.rs
crates/pion-parser/: Cargo.toml
crates/pion-parser/src/: grammar.lalrpop  lib.rs
crates/pion-printer/: Cargo.toml
crates/pion-printer/src/: bump.rs  lib.rs
crates/pion-surface/: Cargo.toml
crates/pion-surface/src/: event.rs  grammar.lalrpop  grammar.rs  lib.rs  parser.rs  printer.rs  reporting.rs  syntax.rs  tests.rs  tree.rs
crates/pion-surface/src/parser/: grammar.rs
crates/pion-surface/src/syntax/: iterators.rs
crates/pion-symbol/: Cargo.toml
crates/pion-symbol/src/: lib.rs
crates/pion-util/: Cargo.toml
crates/pion-util/src/: collect_in.rs  lib.rs  slice_vec.rs
crates/pion-utils/: Cargo.toml
crates/pion-utils/src/: identity.rs  interner.rs  lib.rs  location.rs  nonempty.rs  slice_vec.rs  source.rs  string32.rs  symbol.rs
crates/pion/src/: check.rs  language_server.rs  lib.rs  main.rs  source.rs
crates/pion/tests/: integration_tests.rs
dependent-lambda/: Cargo.toml  tests.md
dependent-lambda/src/: elab.rs  lib.rs  main.rs  surface.rs
dependent-lambda/src/core/: print.rs  semantics.rs  syntax.rs
dependent-lambda/src/elab/: unify.rs
dependent-lambda/src/surface/: grammar.lalrpop  lexer.rs
dependent-lambda/tests/: cli_tests.rs
doc/spec/: lexical-syntax.md
editors/code/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/syntaxes/: pion.tmLanguage.json
experiments/small-step-evaluator/src/: eval.rs  syntax.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs
lambda/: Cargo.toml
lambda/src/: eval.rs  lib.rs  print.rs  syntax.rs
lambda/src/eval/: big_step.rs  small_step.rs
pion/: Cargo.toml
pion/src/: core.rs  elab.rs  lib.rs
pion/src/core/: print.rs  syntax.rs
pion/tests/: cli_tests.rs
prototypes/v1/: Cargo.toml
prototypes/v2/crates/pion-parser/: Cargo.toml
prototypes/v2/crates/pion-parser/src/: grammar.lalrpop
prototypes/v2/tests/: integration_tests.rs
src/: core.rs  elab.rs  env.rs  lib.rs  main.rs  plicity.rs  slice_vec.rs  surface.rs  symbol.rs
src/core/: prim.rs  print.rs  semantics.rs  syntax.rs
src/elab/: expr.rs  match.rs  pat.rs  unify.rs
src/elab/match/: compile.rs  constructors.rs  decompose.rs  matrix.rs
src/surface/: grammar.lalrpop  lexer.rs
stepper/: Cargo.toml
stepper/fuzz/: Cargo.toml
stepper/fuzz/src/: eval.rs
stepper/src/: big_step_semantics.rs  lib.rs  print.rs  semantics.rs  small_step_semantics.rs  small_step_semantics2.rs  syntax.rs  trace.rs
test-data/diagnostics/: unknown-char.snapshot
test-data/elab/: parse-error.snapshot
test-data/elab/fixpoint/: fact.pion  fact.snapshot  fix2-parity.pion  fix2-parity.snapshot  fix2.pion  fix2.snapshot
test-data/elab/fun-app/: beta-redux.pion  beta-redux.snapshot  plicity-mismatch.pion  plicity-mismatch.snapshot  too-many-args.pion  too-many-args.snapshot
test-data/elab/fun-lit/: ambigious-param.snapshot  ambiguous-param.snapshot  check-fun-lit.pion  check-fun-lit.snapshot  const-id-bool.pion
test-data/elab/fun-type/: fun-arrow.pion  id-type.pion  id-type.snapshot  id-type2.pion  id-type2.snapshot
test-data/elab/holes/: hole-type.pion  hole-type.snapshot  unsolved-hole.pion  unsolved-hole.snapshot
test-data/elab/implicit-arg/: generalize.pion  generalize.snapshot  implicit-forall.pion  implicit-forall.snapshot  implicit-fun-app.pion  implicit-fun-app.snapshot  implicit-fun-arrow.pion  implicit-fun-lit.pion  implicit-fun-lit.snapshot  specialize.pion  specialize.snapshot
test-data/elab/let/: show-let.pion
test-data/elab/let-rec/: fact.pion  fact.snapshot
test-data/elab/list/: check-list-literal.pion  check-list-literal.snapshot  empty-list-ambigious.snapshot  empty-list-ambiguous.snapshot  list-append.pion  list-append.snapshot  list-len.pion  list-len.snapshot  list-push.pion  list-push.snapshot  literals.pion  synth-list-literal.pion  synth-list-literal.snapshot
test-data/elab/literal/: bin-int.pion  (+9 more)
tests/: cli_tests.rs
tests/elab/: synth_underscore.pion  synth_underscore.snapshot
v3/: Cargo.toml
v3/crates/pion-cli/src/: main.rs
v3/crates/pion-cli/tests/: integration.rs
v3/crates/pion-core/src/: env.rs
v3/crates/pion-lexer/: Cargo.toml
v3/test-data/diagnostics/parse/: unclosed-delim.pion  unknown-char.snapshot  unmatched-delim.pion  unmatched-delim.snapshot  unopened-delim.snapshot
(+462 files in other folders)
