[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.rust]
unused_qualifications = { level = "warn", priority = 100 }

[workspace.lints.rustdoc]
all = { level = "warn", priority = 0 }

[workspace.lints.clippy]
all      = { level = "warn", priority = 0 }
nursery  = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }

items_after_statements   = { level = "allow", priority = 100 }
match_bool               = { level = "allow", priority = 100 }
missing_errors_doc       = { level = "allow", priority = 100 }
missing_panics_doc       = { level = "allow", priority = 100 }
module_name_repetitions  = { level = "allow", priority = 100 }
must_use_candidate       = { level = "allow", priority = 100 }
option_if_let_else       = { level = "allow", priority = 100 }
return_self_not_must_use = { level = "allow", priority = 100 }
too_many_lines           = { level = "allow", priority = 100 }

[workspace.dependencies]
bumpalo            = { version = "3.15.4", features = ["allocator_api"] }
codespan-reporting = { version = "0.11.1" }
ecow               = { version = "0.2.2" }
smallvec           = { version = "1.13.2", features = ["union"] }
text-size          = { version = "1.1.1" }

[profile.dev]
opt-level = 0

debug            = 0
debug-assertions = true
overflow-checks  = true
panic            = "abort"
strip            = "debuginfo"

codegen-units = 256
incremental   = true

lto = false

[profile.release]
opt-level = 3

debug            = 0
debug-assertions = false
overflow-checks  = false
panic            = "abort"
strip            = "debuginfo"

codegen-units = 16
incremental   = false

lto = "thin"
