[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.rust]
unused_qualifications = { level = "warn" }

[workspace.lints.rustdoc]
all = { level = "warn" }

[workspace.lints.clippy]
all      = { level = "warn" }
nursery  = { level = "warn" }
pedantic = { level = "warn" }

must_use_candidate   = { level = "allow", priority = 100 }
cognitive_complexity = { level = "allow", priority = 100 }
