[workspace]
members  = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.rust]
unused_qualifications = { level = "warn" }

[workspace.lints.rustdoc]
all = { level = "warn" }

[workspace.lints.clippy]
all      = { level = "warn" }
nursery  = { level = "warn" }
pedantic = { level = "warn" }

cognitive_complexity    = { level = "allow", priority = 100 }
missing_errors_doc      = { level = "allow", priority = 100 }
module_name_repetitions = { level = "allow", priority = 100 }
must_use_candidate      = { level = "allow", priority = 100 }
option_if_let_else      = { level = "allow", priority = 100 }

[workspace.dependencies]
text-size = { version = "1.1.1" }
