[package]
name = "cek"

version = "0.1.0"
edition = "2021"

[lints]
rust.unused_qualifications = { level = "warn", priority = 100 }
rustdoc.all                = { level = "warn", priority = 100 }

clippy.all      = { level = "warn", priority = 0 }
clippy.nursery  = { level = "warn", priority = 0 }
clippy.pedantic = { level = "warn", priority = 0 }

clippy.match_bool                         = { level = "allow", priority = 100 }
clippy.missing_const_for_fn               = { level = "allow", priority = 100 }
clippy.missing_errors_doc                 = { level = "allow", priority = 100 }
clippy.missing_panics_doc                 = { level = "allow", priority = 100 }
clippy.module_name_repetitions            = { level = "allow", priority = 100 }
clippy.must_use_candidate                 = { level = "allow", priority = 100 }
clippy.option_if_let_else                 = { level = "allow", priority = 100 }
clippy.single_match_else                  = { level = "allow", priority = 100 }
clippy.too_many_lines                     = { level = "allow", priority = 100 }
clippy.wildcard_imports                   = { level = "allow", priority = 100 }
clippy.match_wildcard_for_single_variants = { level = "allow", priority = 100 }

[dependencies]
bumpalo = "3.16.0"
ecow    = "0.2.2"
futures = "0.3.30"
