[package]
name              = "pion-fuzz"
version.workspace = true
edition.workspace = true
publish           = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4" }
pion-lexer    = { path = "../crates/pion-lexer" }
pion-parser   = { path = "../crates/pion-parser" }
bumpalo       = { workspace = true }

[[bin]]
name  = "lexer"
path  = "fuzz_targets/lexer.rs"
test  = false
doc   = false
bench = false

[[bin]]
name  = "parser"
path  = "fuzz_targets/parser.rs"
test  = false
doc   = false
bench = false
