[workspace]
members  = ["crates/*", "fuzz"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.rust]
unused_qualifications = { level = "warn" }

[workspace.lints.rustdoc]
all = { level = "warn" }

[workspace.lints.clippy]
all      = { level = "warn" }
nursery  = { level = "warn" }
pedantic = { level = "warn" }

allow_attributes_without_reason = { level = "deny", priority = 100 }
as_conversions                  = { level = "deny", priority = 100 }
cast_possible_truncation        = { level = "deny", priority = 100 }
undocumented_unsafe_blocks      = { level = "deny", priority = 100 }

cognitive_complexity    = { level = "allow", priority = 100 }
missing_errors_doc      = { level = "allow", priority = 100 }
module_name_repetitions = { level = "allow", priority = 100 }
must_use_candidate      = { level = "allow", priority = 100 }
option_if_let_else      = { level = "allow", priority = 100 }
match_bool              = { level = "allow", priority = 100 }

[workspace.dependencies]
text-size          = { version = "1.1.1" }
bumpalo            = { version = "3.16.0", features = ["allocator_api"] }
camino             = { version = "1.1.7" }
codespan-reporting = { version = "0.11.1" }
