[package]
name = "pion-cli"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]

[[bin]]
name = "pion"
path = "src/main.rs"

[[test]]
name    = "integration"
harness = false

[dev-dependencies]
libtest-mimic   = "0.7.3"
similar-asserts = "1.5.0"
walkdir         = "2.5.0"
