[package]
name = "pion-cli"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
camino             = { workspace = true }
codespan-reporting = { workspace = true }

clap        = { version = "4.5.9", features = ["derive"] }
pion-core   = { version = "0.1.0", path = "../pion-core" }
pion-lexer  = { version = "0.1.0", path = "../pion-lexer" }
pion-parser = { version = "0.1.0", path = "../pion-parser" }

[[bin]]
name = "pion"
path = "src/main.rs"

[[test]]
name    = "integration"
harness = false

[dev-dependencies]
libtest-mimic   = "0.7.3"
similar-asserts = "1.5.0"
walkdir         = "2.5.0"
