[package]
name = "pion-cli"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bumpalo            = { workspace = true }
camino             = { workspace = true }
codespan-reporting = { workspace = true }

clap        = { version = "4.5.9", features = ["derive"] }
pion-core   = { path = "../pion-core" }
pion-lexer  = { path = "../pion-lexer" }
pion-parser = { path = "../pion-parser" }

[[bin]]
name = "pion"
path = "src/main.rs"

[[test]]
name    = "integration"
harness = false

[dev-dependencies]
libtest-mimic   = { version = "0.7.3" }
similar-asserts = { version = "1.5.0" }
walkdir         = { version = "2.5.0" }
