[package]
name = "pion-elab"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pion-core    = { path = "../pion-core" }
pion-surface = { path = "../pion-surface" }
pion-symbol  = { path = "../pion-symbol" }
pion-util    = { path = "../pion-util" }

bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
ecow               = { workspace = true }
smallvec           = { workspace = true, features = ["union"] }
text-size          = { workspace = true }

internal-iterator = { version = "0.2.3" }
