[package]
name = "pion-elab"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pion-core       = { path = "../pion-core" }
pion-diagnostic = { path = "../pion-diagnostic" }
pion-printer    = { path = "../pion-printer" }
pion-surface    = { path = "../pion-surface" }
pion-symbol     = { path = "../pion-symbol" }
pion-util       = { path = "../pion-util" }

bumpalo   = { workspace = true }
ecow      = { workspace = true }
smallvec  = { workspace = true, features = ["union"] }
text-size = { workspace = true }

internal-iterator = { version = "0.2.3" }
lexical-parse-integer = { version = "0.8.6", features = [
    "format",
    "power-of-two",
] }
