[package]
name = "pion-hir"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
pion-manual-lexer = { path = "../pion-manual-lexer" }
pion-surface      = { path = "../pion-surface" }
pion-utils        = { path = "../pion-utils" }

bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
internal-iterator  = { workspace = true }
nohash             = { workspace = true }
