[package]
name = "pion-language-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
pion-utils = { path = "../pion-utils" }
pion-lexer = { path = "../pion-lexer" }

anyhow     = { version = "1.0.71", features = ["backtrace"] }
lsp-server = { version = "0.7.0" }
lsp-types  = { version = "0.94.0" }
serde_json = { version = "1.0.96" }
