[package]
name = "pion-language-server"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
pion-manual-lexer = { path = "../pion-manual-lexer" }
pion-surface      = { path = "../pion-surface" }
pion-utils        = { path = "../pion-utils" }

anyhow             = { workspace = true }
bumpalo            = { workspace = true }
camino             = { workspace = true }
codespan-reporting = { workspace = true }
lsp-server         = { version = "0.7.2" }
lsp-types          = { version = "0.94.0" }
serde_json         = { version = "1.0.107" }
