[package]
name = "pion-lexer"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
pion-utils = { path = "../pion-utils" }

codespan-reporting = { workspace = true }
logos              = { version = "0.13.0" }
string32           = { workspace = true }

[dev-dependencies]
expect-test = { version = "1.4.1" }
