[package]
name = "pion-surface"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
pion-lexer = { path = "../pion-lexer" }
pion-utils = { path = "../pion-utils" }

bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }
internal-iterator  = { workspace = true }
lalrpop-util       = { version = "0.20.0" }

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false } # disable regex support
