[package]
name = "pion-surface"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
pion-lexer = { path = "../pion-lexer" }
pion-utils = { path = "../pion-utils" }

bumpalo            = { workspace = true }
codespan-reporting = { workspace = true }

[dev-dependencies]
expect-test = { version = "1.4.1" }
