[package]
name = "pion-utils"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow     = { workspace = true }
camino     = { version = "1.1.4" }
fxhash     = { version = "0.2.1" }
lasso      = { version = "0.7.2", features = ["multi-threaded"] }
line-index = { version = "0.1.0-pre.1" }
string32   = { workspace = true }
triomphe   = { version = "0.1.8" }
