[package]
name = "pion-utils"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow             = { workspace = true }
codespan-reporting = { workspace = true }
string32           = { workspace = true }
camino             = { workspace = true }
fxhash             = { workspace = true }
lasso              = { workspace = true }
triomphe           = { workspace = true }
